# ibm-wmla-python-client

./: .gitignore  .secrets.baseline  ARCH.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cp4d_install/: README.md  install_sdk.sh
cp4d_offline_install/ibm_wmla_packages/: ibm_wmla-0.1.2-py3-none-any.whl  ibm_wmla_client-0.1.3-py3-none-any.whl
examples/: README.md  connection_example.py  dataset-dl-example.py  func-example.py  install_python_client (OFFLINE).ipynb  install_python_client (ONLINE).ipynb  model_upload_example.py  original_upload_model.py  test_connection.py  test_model_upload.py
examples/cp4d/: install_python_client.ipynb
examples/mnist_example/: keras_mnist_original.py  keras_mnist_original_predict.py  kernel.py  mnist.tar  model.json  pingpong2.tar  pingpong4.tar  pingpongnew.tar
examples/mnist_example/local_debug_example/: README.md  gen_input.py  input.json  kernel.py  mnist_model.h5  model.json
examples/mnist_example/mnist/: README.md  kernel.py
examples/mnist_example/mnist_model/: keras_metadata.pb  saved_model.pb
examples/mnist_example/mnist_model/variables/: variables.index  (+1 more)
examples/mnist_example/pingpong_edi/: model.json
ibm_wmla_client/: __init__.py  connect.py  inferencing.py  training.py  utils.py
ibm_wmla_client/assets/: download.py
notebooks/: Create and update custom runtime.ipynb  MNIST model deployment.ipynb  install_python_client (OFFLINE).ipynb
wmla-client/: connect.py  dataset.py  extended_kernel.py  inferencing.py  kernel-cutdown.py  kernel.py  redhareapi.py  training.py
(+1 files in other folders)
