[tool.poetry]
name = "ibm_wmla_client"
version = "0.1.0"
description = "A python based client to simplify using Watson Machine Learning Accelerator"
authors = ["Shuang Yu <shuang.yu@ibm.com>", "Kiyeon Jeon <Kiyeon.Jeon@ibm.com>", "Hyun Tae Kim <Hyuntae.Kim1@ibm.com>", "Adam Makarucha <adamjm@au1.ibm.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.20"
python_dateutil = "^2.5.3"
ibm-cloud-sdk-core = "^3.15.3"
ibm-wmla = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"